# GSL-lib

./: .travis.yml  CMakeLists.txt  Makefile  Makefile.travis  README.md  TODO  TODO.md
cmake/: gslpp-config.cmake
include/GSLpp/: basic_math.h  block.h  complex.h  complex_float.h  complex_long_double.h  complex_math.h  complex_polynomial.h  divided_difference.h  eigen.h  error.h  interp.h  linalg.h  matrix.h  matrix_complex.h  matrix_complex_view.h  matrix_view.h  new_triangular_matrix.h  ode.h  permutation.h  polynomial.h  special_functions_bessel.h  special_functions_erf.h  special_functions_exp.h  special_functions_gamma_beta.h  special_functions_hermite.h  special_functions_log.h  special_functions_results.h  special_functions_trig.h  vector.h  vector_complex.h  vector_complex_view.h  vector_view.h
src/: basic_math.cpp  block.cpp  block_impl.cpp  complex.cpp  complex.h  complex_float.cpp  complex_impl.cpp  complex_long_double.cpp  complex_matrix.cpp  complex_matrix.h  complex_template.h  complex_template.tpp  complex_vector.cpp  complex_vector.h  divided_difference.cpp  divided_difference.h  eigen.cpp  eigen.h  error.cpp  impl.cpp  interp.cpp  interp.h  linalg.cpp  linalg.h  main.cpp  matrix.cpp  matrix.h  matrix_complex.cpp  matrix_impl.cpp  matrix_template.h  matrix_template.tpp  ode.cpp  ode.h  permutation.cpp  permutation.h  polynomial.h  special_functions.h  special_functions_bessel.cpp  special_functions_bessel.h  special_functions_coupling.cpp  (+25 more)
src/GSLpp/: complex.h  divided_difference.h  eigen.h  matrix.h  ode.h  polynomial.h  special_functions.h  special_functions_coupling.h  special_functions_laguerre.h  special_functions_legendre.h  vector.h
test/: complex_base_math.cpp  complex_f_base_math_test.cpp  complex_f_test.cpp  complex_ld_base_math_test.cpp  complex_ld_test.cpp  complex_test.cpp  interp_test.cpp  matrix_c_test.cpp  matrix_cx_test.cpp  matrix_cxf_test.cpp  matrix_cxld_test.cpp  matrix_f_test.cpp  matrix_i_test.cpp  matrix_ld_test.cpp  matrix_s_test.cpp  matrix_test.cpp  matrix_uc_test.cpp  matrix_ui_test.cpp  matrix_us_test.cpp  vector_c_test.cpp  vector_cx_test.cpp  vector_cxf_test.cpp  vector_cxld_test.cpp  vector_f_test.cpp  vector_i_test.cpp  vector_l_test.cpp  vector_ld_test.cpp  vector_s_test.cpp  vector_test.cpp  vector_uc_test.cpp  vector_ui_test.cpp  vector_ul_test.cpp  vector_us_test.cpp
tests/: complex_base_math.cpp  complex_base_math_test.cpp  complex_f_test.cpp  complex_ld_base_math_test.cpp  complex_ld_test.cpp  complex_test.cpp  matrix_c_test.cpp  matrix_cx_test.cpp  matrix_cxf_test.cpp  matrix_cxld_test.cpp  matrix_ld_test.cpp  matrix_s_test.cpp  matrix_test.cpp  matrix_uc_test.cpp  matrix_ui_test.cpp  ode_test.cpp  vector_c_test.cpp  vector_cx_test.cpp  vector_cxf_test.cpp  vector_cxld_test.cpp  vector_f_test.cpp  vector_i_test.cpp  vector_l_test.cpp  vector_ld_test.cpp  vector_s_test.cpp  vector_test.cpp  vector_uc_test.cpp  vector_ui_test.cpp  vector_ul_test.cpp  vector_us_test.cpp
